# rusty-os

./: Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  terminal.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/sys/: ata.rs  clock.rs  cmos.rs  cpu.rs  idt.rs  keyboard.rs  mod.rs  pci.rs  serial.rs  time.rs  vga.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
